a few fixes found in testing for the new session